Update styling in index.html

--- a/ack/index.html
+++ b/ack/index.html
@@ -11,8 +11,8 @@
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Church Template CSS -->
-<link href="css/church.css" rel="stylesheet">
-<link href="css/fancybox.css" rel="stylesheet">
+<link href="/css/church.css" rel="stylesheet">
+<link href="/css/fancybox.css" rel="stylesheet">
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="js/html5shiv.js"></script>
@@ -20,7 +20,7 @@
 <![endif]-->
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="images/favicon.png">
+<link rel="shortcut icon" href="/images/favicon">
 
 <!-- Custom Google Font : Montserrat and Droid Serif -->
 
