--- a/ack/about.html
+++ b/ack/about.html
@@ -52,7 +52,8 @@
             <li><a href="kama.html">Kama</a></li>
             <li><a href="mother's Union.html">Mother's Union</a></li>
             <li><a href="kayo.html">Kayo</a></li>
-            <li><a href="children ministry.html">Children Ministyr</a></li>
+            <li><a href="children ministry.html">Children Ministy</a></li>
+            <li><a href="children ministry.html">MalCDT</a></li>
           </ul>
         </li>
         <li><a href="Downloads.html">Downloads</a></li>
@@ -90,7 +91,7 @@
 <div class="subpage-head has-margin-bottom">
   <div class="container">
     <h3>About us</h3>
-    <p class="lead">Write something about your church here. Keep it simple though. </p>
+    <p class="lead">Ack Diocese Of Malindi </p>
   </div>
 </div>
 
@@ -124,7 +125,21 @@
       <li>Local Church Committees LCC</li>
       <p>The management of Diocese's day-to-day operations is carried out under the supervision of the Bishop. The Bishop provides oversight to the Diocese through the Vicar General, Registrar and The Administrative secretary. Legal custody of Diocese's property is entrusted to the Church Commissioners of Kenya.</p>
 
+
+      <h4>Vision</h4>
+      <p>A holistic transformation Church proclaiming the gospel of Christ.</p>
+       <h4>Mission</h4>
+      <p>To equip and empower society through evangelism, discipleship and economic transformation</p>
       <h4>Core Values</h4>
+      <p>In all our work we commit ourselves to be participatory, democratic, honest and trustworthy and we will be in the forefront to uphold Christian values in areas of our work and beyond. We also up hold self–criticism and monitoring and evaluations as methods to revitalize ourselves. Our core values include the following:</p>
+      <p> 1. Team Work </p>
+      <p> 2. Integrity (Transparent, Accountability, Stewardship) </p>
+      <p> 3. Respect to diverse </p>
+      <p> 4. Gender Equity</p>
+      <p> 5.  Honesty</p>
+      <p> 6. Compassion</p>
+      <p> 7. Biblically grounded</p>
+      <p> The challenge now is to internalize and mainstream these values in the day-to-day life and operations of the Diocese. </p>
 
       
     </div>
@@ -161,20 +176,20 @@ Parish. Reuben became a born-again Christian in the year 1997 in a Tuktendereza 
   </div>
   <div class="row feature-block">
     <div class="col-md-4 col-sm-6 has-margin-bottom"> <img class="img-responsive" src="images/team-1.jpg" alt="catholic church">
-      <h5>REV: JOSE MATHEW</h5>
-      <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa. </p>
+      <h5></h5>
+      <p> </p>
       <p><a href="#" role="button">Facebook</a> / <a href="#" role="button">Twitter</a></p>
     </div>
     <!-- /.col-md-4 -->
     <div class="col-md-4 col-sm-6 has-margin-bottom"> <img class="img-responsive" src="images/team-2.jpg" alt="ministry sermon">
-      <h5>FR: VINCENT</h5>
-      <p>Fermentum massa.Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+      <h5></h5>
+      <p>d</p>
       <p><a href="#" role="button">Facebook</a> / <a href="#" role="button">Twitter</a></p>
     </div>
     <!-- /.col-md-4 -->
     <div class="col-md-4 col-sm-8 col-sm-offset-2 col-md-offset-0 center-this has-margin-bottom"> <img class="img-responsive" src="images/team-3.jpg" alt="bulletin programs">
-      <h5>THIMOTHY FRANCIS</h5>
-      <p> Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa etiam porta fusce dapibus.</p>
+      <h5></h5>
+      <p> </p>
       <p><a href="#" role="button">Facebook</a> / <a href="#" role="button">Twitter</a></p>
     </div>
     <!-- /.col-md-4 --> 
