--- a/ack/index.html
+++ b/ack/index.html
@@ -52,7 +52,8 @@
             <li><a href="kama.html">Kama</a></li>
             <li><a href="mother's Union.html">Mother's Union</a></li>
             <li><a href="kayo.html">Kayo</a></li>
-            <li><a href="children ministry.html">Children Ministyr</a></li>
+            <li><a href="children ministry.html">Children Ministy</a></li>
+            <li><a href="children ministry.html">MalCDT</a></li>
           </ul>
         </li>
         <li><a href="Downloads.html">Downloads</a></li>
@@ -299,8 +300,8 @@
   </div>
   <div class="img-gallery row">
     <div class="col-sm-4 col-md-3"> <a class="fancybox" href="images/gallery/img_gallery_1.jpg" data-fancybox-group="gallery" title="church image gallery"> <img src="images/gallery/thumb/gallery_thumb_1.jpg" class="img-responsive" width="270" height="270" alt="church image gallery"> </a>
-    <p>rev alphonce baya</p>
-    <p>rev alphonce baya</p> </div>
+    <p></p>
+    <p></p> </div>
     <div class="col-sm-4 col-md-3"> <a class="fancybox" href="images/gallery/img_gallery_2.jpg" data-fancybox-group="gallery" title="church image gallery"> <img src="images/gallery/thumb/gallery_thumb_2.jpg" class="img-responsive" width="270" height="270" alt="church image gallery"> </a> </div>
     <div class="col-sm-4 col-md-3"> <a class="fancybox" href="images/gallery/img_gallery_3.jpg" data-fancybox-group="gallery" title="church image gallery"> <img src="images/gallery/thumb/gallery_thumb_3.jpg" class="img-responsive" width="270" height="270" alt="church image gallery"> </a> </div>
     <div class="col-sm-4 col-md-3"> <a class="fancybox" href="images/gallery/img_gallery_4.jpg" data-fancybox-group="gallery" title="church image gallery"> <img src="images/gallery/thumb/gallery_thumb_4.jpg" class="img-responsive" width="270" height="270" alt="church image gallery"> </a> </div>
