--- a/ack/installation Service.html
+++ b/ack/installation Service.html
@@ -52,8 +52,8 @@
             <li><a href="kama.html">Kama</a></li>
             <li><a href="mother's Union.html">Mother's Union</a></li>
             <li><a href="kayo.html">Kayo</a></li>
-            <li><a href="children ministry.html">Children Ministyr</a></li>
-          </ul>
+            <li><a href="children ministry.html">Children Ministy</a></li>
+            <li><a href="children ministry.html">MalCDT</a></li>
         </li>
         <li><a href="Downloads.html">Downloads</a></li>
 
