--- a/ack/blog.html
+++ b/ack/blog.html
@@ -52,7 +52,8 @@
             <li><a href="kama.html">Kama</a></li>
             <li><a href="mother's Union.html">Mother's Union</a></li>
             <li><a href="kayo.html">Kayo</a></li>
-            <li><a href="children ministry.html">Children Ministyr</a></li>
+            <li><a href="children ministry.html">Children Ministy</a></li>
+            <li><a href="children ministry.html">MalCDT</a></li>
           </ul>
         </li>
         <li><a href="Downloads.html">Downloads</a></li>
@@ -154,7 +155,7 @@
       </div>
       <div class="well">
         <h4>About</h4>
-        <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>For the word of God is living and active. Sharper than any double-edged sword, it penetrates even to dividing soul and spirit, joints and marrow; it judges the thoughts and attitudes.</p>
       </div>
       <div class="vertical-links has-margin-xs-bottom">
         <h4>Blog archives</h4>
