--- a/ack/about.html
+++ b/ack/about.html
@@ -52,8 +52,8 @@
             <li><a href="kama.html">Kama</a></li>
             <li><a href="mother's Union.html">Mother's Union</a></li>
             <li><a href="kayo.html">Kayo</a></li>
-            <li><a href="children ministry.html">Children Ministy</a></li>
-            <li><a href="children ministry.html">MalCDT</a></li>
+            <li><a href="children ministry.html">Children Ministry</a></li>
+            <li><a href="MalCDT.html">MalCDT</a></li>
           </ul>
         </li>
         <li><a href="Downloads.html">Downloads</a></li>
@@ -70,7 +70,6 @@
             <li><a href="image-gallery.html">Image Gallery</a></li>
             <li><a href="blog-single.html">Blog Single</a></li>
             <li><a href="event-calendar.html">Event Calendar</a></li>
-            <li><a href="charity-donation.html">Charity &amp; Donations</a></li>
             <li class="divider"></li>
             <li><a href="prayers.html">Prayers</a></li>
           
