--- a/ack/contact.html
+++ b/ack/contact.html
@@ -127,7 +127,7 @@
       <div class="row">
         <div class="col-lg-6">ACK<br>
           Along Lamu Road Next to ACK St. Andrew's Cathedral  <br>
-          Lamu Road, Malindi, Kenya, 80200</div>
+          Lamu Road, Malindi, Kenya, 6110-80200 </div>
         <div class="col-lg-6">Phone: 0202196730<br>
           Email: <a href="#">ackmalindidiocese@gmail.com</a></div>
       </div>
@@ -137,7 +137,7 @@
         <div class="col-lg-6">ACK<br>
           Along Lamu Road Next to ACK St. Andrew's Cathedral  <br>
           Lamu Road, Malindi, Kenya, 80200</div>
-        <div class="col-lg-6">Phone: 0202196730<br>
+        <div class="col-lg-6">Phone: 0788062724<br>
           Email: <a href="#">ackmalindidiocese@gmail.com</a></div>
       </div>
       </div>
